--- a/palindrome.html
+++ b/palindrome.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-  <title>パリンドロームテスター</title>
-  <script src="bundle.js"></script>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <title>パリンドロームテスター</title>
+    <script src="bundle.js"></script>
+  </head>
+  <body>
+    <h1>パリンドロームテスター</h1>
+
+    <form id="palindromeTester">
+      <textarea name="phrase" rows="10" cols="30"></textarea>
+      <br>
+      <button type="submit">パリンドロームかどうかをチェックする</button>
+    </form>
+
+    <h2>結果</h2>
+
+    <p id="palindromeResult"></p>
+
+  </body>
 </html>
